tickernoti: fix z-index

--- a/src/themes/nbeat-black/jquery.mobile.tickernoti.less
+++ b/src/themes/nbeat-black/jquery.mobile.tickernoti.less
@@ -28,7 +28,7 @@
 	left: 0;
 	width: 100%;
 	height: @ticker-height;
-	z-index: 210;
+	z-index: 1100;
 	background: rgb(49, 109, 140);
 
 	-webkit-animation: ui-ticker-show 0.8s 1 ease;
@@ -40,7 +40,7 @@
 	left: 0;
 	width: 100%;
 	height: @ticker-height;
-	z-index: 210;
+	z-index: 1100;
 	background: rgb(49, 109, 140);
 
 	-webkit-animation: ui-ticker-hide 0.6s 1 ease;
